# wizardy

./: .gitignore  Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: gen.rs  lib.rs
examples/: foo.rs
src/: lib.rs
